<?xml version="1.0"?>
<package format="3">
  <name>grove_sensors</name>
  <version>0.1.0</version>
  <description>ISM330DHCX IMU and HC-SR04 ultrasonic drivers</description>
  <maintainer email="you@example.com">s23</maintainer>
  <license>Apache-2.0</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
