<?xml version="1.0"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.1.0</version>
  <description>Robot bringup launch files and config</description>
  <maintainer email="you@example.com">s23</maintainer>
  <license>Apache-2.0</license>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>zlac_driver</exec_depend>
  <exec_depend>grove_sensors</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
