<?xml version="1.0"?>
<package format="3">
  <name>robot_description</name>
  <version>0.1.0</version>
  <description>Robot URDF description</description>
  <maintainer email="you@example.com">s23</maintainer>
  <license>Apache-2.0</license>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
